@@ -5,6 +5,7 @@ o Listing, coalescing and modfying Optional Content Groups.
 o Vendored in tiny_json from Yoshihiro Imai via Jan Furuse
 o New -labels-progress option to improve page labels interface
 o New options -output-json et al. to export PDF files in JSON format
+o New option -stamp-as-xobject to add one PDF as an xobject in another
 
 Version 2.3 (patchlevel 1, December 2019)
 
